@@ -9,8 +9,11 @@ RUN [ "cross-build-start" ]
 
 RUN install_packages wget
 
-RUN wget https://github.com/philippe44/AirConnect/raw/0.2.51.1/bin/airupnp-arm-static && \
-    wget https://github.com/philippe44/AirConnect/raw/0.2.51.1/bin/aircast-arm-static && \
+# RUN wget https://github.com/philippe44/AirConnect/raw/0.2.51.1/bin/airupnp-arm-static && \
+#     wget https://github.com/philippe44/AirConnect/raw/0.2.51.1/bin/aircast-arm-static && \
+
+RUN wget https://github.com/philippe44/AirConnect/raw/14ecfa56f0e20b4a9e2615761ef34f7e92bc2128/bin/airupnp-arm-static && \
+    wget https://github.com/philippe44/AirConnect/raw/14ecfa56f0e20b4a9e2615761ef34f7e92bc2128/bin/aircast-arm-static && \
     chmod +x airupnp-arm-static && \
     chmod +x aircast-arm-static
 
